Update jawa coyy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sianu git</title>
 </head>
 <body>
-    <h1>SINAU JUDUL</h1>
-    <h2>Belajar Git</h2>
+    <h1>UPDATE JAWA CUY</h1>
+   
 </body>
 </html>
